--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "html-to-image": "^1.11.13",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-qr-code": "^2.0.15",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
